--- a/index.html
+++ b/index.html
@@ -4,57 +4,10 @@
     <head>
         <meta charset="utf-8">
         <script src="src/js/main.js" defer></script>
-        <style>
-            @font-face {
-                font-family: custom-serif;
-                src: local(Microsoft JhengHei), local("DFKai-sb");
-                unicode-range: U+4E00-9FFF;
-            }
-
-            @font-face {
-                font-family: custom-serif;
-                src: local(Source Code Pro), local(Arial);
-                unicode-range: U+00-024F;
-            }
-
-            html {
-                height: 100%;
-                font-family: custom-serif;
-            }
-
-            body {
-                height: 100%;
-                margin: 0px;
-                display: flex;
-                flex-direction: column;
-            }
-        </style>
-        <style>
-            /* .a{
-
-            } */
-            .b {
-                flex: 1;
-                margin-left: auto;
-                background-color: rgb(66, 66, 66);
-                color: white;
-                transition-property: width;
-                transition-duration: 1s;
-                width: 5%;
-            }
-
-            .b:hover {
-                transition-property: width;
-                transition-duration: 1s;
-                width: 10%;
-            }
-        </style>
     </head>
 
     <body>
-
-        <div class="b">你好</div>
-
+        <div id="main"></div>
     </body>
 
 </html>
